# singleton-registry

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PORTING.md  README.md  RELEASING.md
.github/: FUNDING.yml
examples/: basic_usage.rs  singleton_replacement.rs  trait_contracts.rs
src/: lib.rs  macros.rs  registry.rs  registry_error.rs  registry_event.rs  registry_trait.rs
tests/: advanced_patterns.rs  mapping_closures_and_functions.rs  mapping_primitives_and_strings.rs  mapping_traits.rs  registry_isolation.rs  tracing_and_events.rs  without_macro.rs
