[package]
name = "singleton-registry"
version = "1.0.1"
edition = "2021"
authors = ["Dominik Jelinek <dominik.jelinek111@gmail.com>"]
description = "A synchronous, thread-safe singleton registry for global type-based storage and retrieval"
license = "BSD-3-Clause"
repository = "https://github.com/dominikj111/singleton-registry"
homepage = "https://github.com/dominikj111/singleton-registry"
documentation = "https://docs.rs/singleton-registry"
readme = "README.md"
keywords = [
    "synchronous",
    "singleton",
    "type-based",
    "registry",
    "global",
]
categories = ["data-structures", "concurrency"]

[dependencies]

[dev-dependencies]
serial_test = "3.0"
